[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/SkillbarTooltip.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/tooltip.png" type="Texture" id=3]

[node name="SkillbarTooltip" type="Popup"]
margin_right = 128.0
margin_bottom = 115.0
rect_min_size = Vector2( 128, 115 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -63.0
margin_top = -129.0
margin_right = 65.0
margin_bottom = -14.0
rect_min_size = Vector2( 128, 115 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
margin_left = 5.0
margin_top = 4.0
margin_right = 123.0
margin_bottom = 114.0

[node name="SkillName" type="Label" parent="Background/VBoxContainer"]
unique_name_in_owner = true
margin_right = 118.0
margin_bottom = 16.0
rect_min_size = Vector2( 118, 0 )
theme = ExtResource( 1 )
theme_type_variation = "Label_larger"
text = "<SkillName>"
align = 1
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 118.0
margin_bottom = 110.0
rect_min_size = Vector2( 118, 90 )
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/ScrollContainer"]
margin_right = 118.0
margin_bottom = 61.0
rect_min_size = Vector2( 118, 0 )
mouse_filter = 2

[node name="SkillType" type="Label" parent="Background/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 118.0
margin_bottom = 12.0
rect_min_size = Vector2( 118, 0 )
theme = ExtResource( 1 )
text = "<SkillType>"
align = 1
clip_text = true

[node name="SkillDescription" type="RichTextLabel" parent="Background/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 16.0
margin_right = 118.0
margin_bottom = 29.0
rect_min_size = Vector2( 118, 0 )
theme = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 118.0
margin_bottom = 45.0
mouse_filter = 2

[node name="CooldownLabel" type="Label" parent="Background/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 12.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.282353, 0.729412, 0.780392, 1 )
text = "Cooldown:"
valign = 1

[node name="CooldownDuration" type="Label" parent="Background/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 45.0
margin_right = 102.0
margin_bottom = 12.0
rect_min_size = Vector2( 57, 0 )
theme = ExtResource( 1 )
text = "<Amount>"
valign = 1
clip_text = true

[node name="SkillUpgradesLabel" type="Label" parent="Background/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 118.0
margin_bottom = 61.0
theme = ExtResource( 1 )
text = "Skill Upgrades:"
